--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@
   flex-direction: column;
   height: 100%;
   justify-content: center;
-  max-width: 30ch;
   min-width: 100%;
   padding: 3.33rem;
+  & p {
+    max-width: 30ch;
+  }
 }
